--- a/Style/Topico2.css
+++ b/Style/Topico2.css
@@ -65,6 +65,10 @@ p{
     margin-top: 15px; 
 }
 
+li {
+    list-style-type: none;
+}
+
 #body {
     background-color: #e0e0e0;
 }
@@ -104,16 +108,15 @@ p{
 
 #Header_logo {
     height: 156px;
-    width: 710px;
+    width: 510px;
     float: left;
-    clear: both; 
     padding-top: 10px;
 }
 
 #Header_LogoIMG {
     height: 140px;
     width: 350px;
-    margin-left: 350px;
+    margin-left: 40px;
 }
 
 #Header_Menus {
@@ -171,6 +174,39 @@ p{
 .Menu:active {
   background-color: rgb(95, 95, 95);
 }
+
+/*Menu De Navegação*/
+
+#MenuNavegacao {
+    height: 158px;
+    width: 198px;
+    float: left;
+    border: solid 1px white;
+    border-radius: 10px;
+}
+
+@keyframes NavSelect {
+    0% {background-color: black;}
+    50% {background-color: grey;}
+    100% {background-color: black;}
+}
+
+.SeletoresDeNavegacao {
+    text-align: center;
+    font-size: 16px;
+    color: white;
+    background-color: black;
+    margin-top: 8px;
+    border-radius: 15px;
+}
+
+.SeletoresDeNavegacao:hover {
+    animation-name: NavSelect;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
 #banner{
     width: 100%;
     height: 1000px;
