--- a/Style/Topico2.css
+++ b/Style/Topico2.css
@@ -206,7 +206,7 @@ li {
 
 #banner{
     width: 100%;
-    height: 1000px;
+    height: 600px;
     background-color: RGBA(13, 196, 217,0.7);
     /*Coloca imagem de fundo*/
     background-image: url(../images/Topico2/Wallpaper.jpg);
@@ -443,18 +443,13 @@ li {
 #ModoGrafico{
     height: 600px;
     width: 1300px;
-<<<<<<< HEAD
     background-color:  #000000; 
-=======
     background-color: #e0e0e0; 
->>>>>>> 55d88efe98a259e13fe743fa39ba209e2b04c402
 }
 #ModoGraficoTexto {
-    width: 30%;
+    width: 400px;
     height: 500px;
     background-color: #e0e0e0;
-    padding-left: 60px;
-    padding-right: 60px;
     clear: both;
     float: left;
 }
@@ -504,6 +499,7 @@ li {
     width: 1300px;
     height: 650px;
     background-color: #e0e0e0;
+    margin-bottom: 30px;
 }
 
 /* Trabalho com Janelas */
@@ -531,6 +527,7 @@ li {
 	background-color: #e0e0e0;
     padding-left:10px;
     padding-right:10px;
+
 }
 
 #ConfiguracaoDoSistemaImagem {
