--- a/Style/Topico2.css
+++ b/Style/Topico2.css
@@ -24,6 +24,7 @@ a:visited, a:link, a:active {
 .FullIMG{
     width: inherit;
     height: inherit;
+    border: solid 2px;
 }
 body{
     background-color: #e0e0e0;
@@ -494,6 +495,7 @@ li {
 	padding-bottom: 10px;
     padding-left:10px;
     padding-right:10px;
+    margin-top: 40px;
 }
 #Linha7{
     width: 1300px;
@@ -505,16 +507,15 @@ li {
 /* Trabalho com Janelas */
 
 #TrabalhoComJanelas {
-    padding-left:10px;
-    padding-right:10px;
-	width: 40%;
+	width: 500px;
 	height: 600px;
 	float: left;
 }
 
 #JanelasImagem {
 	height: 400px;
-    margin-top: 40px;
+    width: inherit;
+    margin-top: 30px;
 }
 
 
@@ -531,9 +532,10 @@ li {
 }
 
 #ConfiguracaoDoSistemaImagem {
-	height: 400px;
+	height: 350px;
 	padding-bottom: 10px;
 	padding-top: 10px;
+    text-align: center;
 }
 
 #FerramentasDoSistemaTexto {
@@ -599,9 +601,10 @@ li {
 }
 
 #MenuDeAjudaImagem {
-	margin-top: 80px;
+	margin-top: 110px;
     height: 300px;
     width: 500px;
+    text-align: left;
 }
 
 #Linha9{
