--- a/Style/Topico5.css
+++ b/Style/Topico5.css
@@ -54,6 +54,8 @@ p{
 
   color: white;
 
+  text-shadow: 20px 20px 100px black;
+
 }
 
 /* fontes */
@@ -174,8 +176,7 @@ p{
 #banner{
 
   width: 100%;
-  height: 600px;
-  margin-top: 10px;
+  height: 1000px;
   background-image: url(../images/Topico5/excelbanner.jpg);
 
   background-attachment: fixed;
@@ -190,8 +191,7 @@ p{
   width: 65%;
   height: 400px;
   float: left;
-  background-color: RGBA(63,191,89,0.5);
-  border: 1px solid black;
+
   padding-top: 20px;
   padding-left: 20px;
 
@@ -216,6 +216,7 @@ p{
   padding-top: 20px;
   float: right;
 
+
 }
 
 #FormatacaoDeCelulasImagem {
@@ -232,8 +233,7 @@ p{
 
   width: 45%;
   height: 450px;
-  background-color: RGBA(63,191,89,0.5);
-  border: 1px solid black;
+
   padding-top: 20px;
   padding-left: 20px;
   float: right;
@@ -256,8 +256,7 @@ p{
 
   width: 70%;
   height: 550px;
-  background-color: RGBA(63,191,89,0.5);
-  border: 1px solid black;
+
   padding-top: 20px;
   padding-left: 20px;
   clear: both;
@@ -297,8 +296,7 @@ p{
 
 width: 55%;
 height: 450px;
-background-color: RGBA(63,191,89,0.5);
-border: 1px solid black;
+
 padding-top: 20px;
 padding-left: 20px;
 padding-right: 20px;
@@ -326,8 +324,7 @@ float: left;
   clear: both;
   width: 100%;
   height: 250px;
-  background-color: RGBA(63,191,89,0.5);
-  border: 1px solid black;
+
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 20px;
@@ -367,8 +364,7 @@ float: left;
 
   width: 100%;
   height: 250px;
-  background-color: RGBA(63,191,89,0.5);
-  border: 1px solid black;
+
   padding-top: 30px;
   padding-left: 50px;
   padding-right: 50px;
@@ -393,8 +389,7 @@ float: left;
 
   width: 100%;
   height: 400px;
-  background-color: RGBA(63,191,89,0.5);
-  border: 1px solid black;
+
   margin-top: 10px;
   padding-top: 20px;
   padding-left: 50px;
@@ -429,8 +424,7 @@ padding-top: 20px;
 
   width: 100%;
   height: 250px;
-  background-color: RGBA(63,191,89,0.5);
-  border: 1px solid black;
+
   padding-top: 20px;
   padding-left: 20px;
 
@@ -459,8 +453,7 @@ padding-top: 20px;
    width: 100%;
   height: 200px;
   margin-bottom: 10px;
-  background-color: RGBA(63,191,89,0.5);
-  border: 1px solid black;
+
   padding-top: 20px;
   padding-left: 20px;
 }
@@ -521,8 +514,7 @@ padding-top: 20px;
 
   width: 100%;
   height: 250px;
-  background-color: RGBA(63,191,89,0.5);
-  border: 1px solid black;
+
   margin-top: 10px;
   margin-bottom: 10px;
   padding-left: 100px;
