--- a/Style/Topico3.css
+++ b/Style/Topico3.css
@@ -240,6 +240,14 @@ ul{
 .images{
     width: 33.3;
 }
+
+#banner {
+    width: 100%;
+    height: 1000px;
+    background-image: url(../images/Topico3/opensourcebanner.jpg);
+    background-attachment: fixed;
+    background-size: 100% 600px;
+}
 /* conteudo */
 
   /* rodapé */
