--- a/Style/Topico1.css
+++ b/Style/Topico1.css
@@ -94,9 +94,9 @@ li {
     position: fixed;
 }
 
-#Header_logo {
+#Header_Logo {
     height: 156px;
-    width: 500px;
+    width: 510px;
     float: left;
     padding-top: 10px;
     
