--- a/Style/Topico4.css
+++ b/Style/Topico4.css
@@ -100,7 +100,7 @@ li {
     border: solid 2px rgba( 219, 219, 219, 0.5 );
 }
 
-#Header_logo {
+#Header_Logo {
   height: 156px;
   width: 710px;
   float: left;
