--- a/Style/Topico5.css
+++ b/Style/Topico5.css
@@ -95,7 +95,7 @@ p{
     background-color: rgba(16,110,63);
 }
 
-#Header_logo {
+#Header_Logo {
     height: 156px;
     width: 710px;
     float: left;
