--- a/Style/Topico5.css
+++ b/Style/Topico5.css
@@ -5,12 +5,6 @@
     padding: 0px;
     box-sizing: border-box;
 }
-/* fonts */
-
-@font-face{
-  font-family: SoutherlandSerif;
-  src: url(../Fonts/Topico5/NSS.ttf);
-}
 
 
 /* regras globais */
@@ -35,7 +29,7 @@ h1, h2{
   font-weight: bold;
   text-align: center;
   color:white;
-  font-family: SoutherlandSerif, verdana, arial;
+  font-family: verdana, arial;
 }
 
 h2{
